--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+<body>
+
 <div class="container">
   <div class="row">
     <div class="col-md-12">
@@ -14,6 +16,8 @@
     </div>
   </div>
 </div>
+
+<%= js add_gritter(flash[:notice], title: "Overtime App Notification", sticky: false) %>
 
 </body>
 </html>
