--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,4 @@
+<%= form_for @post, class: "form-horizontal" do |f| %>
 
   <% if @post.errors.any? %>
     <% @post.errors.full_messages.each do |error| %>
@@ -14,6 +15,8 @@
     <%= f.label :rationale, class: "col-sm-2 control-label" %>  
     <%= f.text_area :rationale, class: "form-control" %>  
   </div>
+
+  <%= render partial: 'status', locals: { f: f } if current_user.type == 'AdminUser' %>
   
   <%= f.submit 'Save', class: 'btn btn-primary btn-block' %>
 
