--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,6 +2,7 @@
   <h1>Time Tracker</h1>
 </div>
 
+<!-- TODO -->
 <% if current_user %>
   <ul class="custom-nav nav nav-tabs">
     <li class="<%= active?(root_path) %>">
@@ -16,13 +17,15 @@
     <li class="dropdown pull-right">
        <a href="#" data-toggle="dropdown" class="dropdown-toggle">Options<strong class="caret"></strong></a>
       <ul class="dropdown-menu">
-
+        
+        <!-- TODO -->
         <% if current_user.try(:type) == 'AdminUser' %>
-          <li>
-            <%= link_to "Admin Dashboard", admin_root_path %>
-          </li>
-          <li class="divider"></li>
+        <li>
+          <%= link_to "Admin Dashboard", admin_root_path %>
+        </li>
+        <li class="divider"></li>
         <% end %>
+        <!-- TODO -->
 
         <li>
           <%= link_to "Logout", destroy_user_session_path, method: :delete %>
@@ -31,3 +34,4 @@
     </li>
   </ul>
 <% end %>
+<!-- TODO -->
