--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "posts.scss";
-@import "gritter"
+@import "gritter";
 @import "bourbon";
 
 .custom-nav {
