--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,24 +1,24 @@
-
-<h1>Posts</h1>
-
-<table class="table table-striped table-hover">
-  <thead>
-    <tr>
-      <th>
-        #
-      </th>
-      <th>
-        Date
-      </th>
-      <th>
-        User
-      </th>
-      <th>
-        Rationale
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-    <%= render @posts %>
-  </tbody>
-</table>
+<thead>
+  <tr>
+    <th>
+      #
+    </th>
+    <th>
+      Overtime Requested
+    </th>
+    <th>
+      Date
+    </th>
+    <th>
+      User
+    </th>
+    <th>
+      Rationale
+    </th>
+    <th>
+      Status
+    </th>
+    <th></th>
+    <th></th>
+  </tr>
+</thead>
