Structure page flow for admin and user

--- a/app/views/audit_logs/index.html.erb
+++ b/app/views/audit_logs/index.html.erb
@@ -1,3 +1,4 @@
+<h1>Audit Log Dashboard</h1>
 
 <table class="table table-striped table-hover">
   <thead>
@@ -6,16 +7,13 @@
         #
       </th>
       <th>
-        Overtime Requested
+        Employee
       </th>
       <th>
-        Date
+        Week Starting
       </th>
       <th>
-        User
-      </th>
-      <th>
-        Rationale
+        Confirmed At
       </th>
       <th>
         Status
@@ -24,11 +22,11 @@
       <th></th>
     </tr>
   </thead>
-  <tbody id="posts">
-    <%= render @posts %>
+  <tbody id="audit_logs">
+    <%= render @audit_logs %>
   </tbody>
 </table>
 
 <div id="paginator">
-  <%= paginate @posts, remote: true %>
+  <%= paginate @audit_logs, remote: true %>
 </div>
